crates/capsec-tests/tests/compile_fail/has_forgery_god_mode.rs
/// God-mode forgery (claiming ALL permissions) is now blocked by Has<P> being sealed.
use capsec::prelude::*;

struct GodForgery;

impl Has<FsRead> for GodForgery {
    fn cap_ref(&self) -> Cap<FsRead> { panic!() }
}

fn main() {}
