crates/capsec-tests/tests/compile_fail/has_forgery_god_mode.stderr
error[E0277]: the trait bound `GodForgery: capsec_core::has::sealed::Sealed<capsec::FsRead>` is not satisfied
 --> tests/compile_fail/has_forgery_god_mode.rs:6:22
  |
6 | impl Has<FsRead> for GodForgery {
  |                      ^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `capsec_core::has::sealed::Sealed<capsec::FsRead>` is not implemented for `GodForgery`
 --> tests/compile_fail/has_forgery_god_mode.rs:4:1
  |
4 | struct GodForgery;
  | ^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `capsec_core::has::sealed::Sealed<P>`:
            `capsec::Cap<(Ambient, Ambient)>` implements `capsec_core::has::sealed::Sealed<Ambient>`
            `capsec::Cap<(Ambient, EnvRead)>` implements `capsec_core::has::sealed::Sealed<Ambient>`
            `capsec::Cap<(Ambient, EnvRead)>` implements `capsec_core::has::sealed::Sealed<EnvRead>`
            `capsec::Cap<(Ambient, EnvWrite)>` implements `capsec_core::has::sealed::Sealed<Ambient>`
            `capsec::Cap<(Ambient, EnvWrite)>` implements `capsec_core::has::sealed::Sealed<EnvWrite>`
            `capsec::Cap<(Ambient, FsAll)>` implements `capsec_core::has::sealed::Sealed<Ambient>`
            `capsec::Cap<(Ambient, FsAll)>` implements `capsec_core::has::sealed::Sealed<FsAll>`
            `capsec::Cap<(Ambient, FsWrite)>` implements `capsec_core::has::sealed::Sealed<Ambient>`
          and $N others
note: required by a bound in `capsec::Has`
 --> $WORKSPACE/crates/capsec-core/src/has.rs
  |
  | pub trait Has<P: Permission>: sealed::Sealed<P> {
  |                               ^^^^^^^^^^^^^^^^^ required by this bound in `Has`
  = note: `Has` is a "sealed trait", because to implement it you also need to implement `capsec_core::has::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following types implement the trait:
            capsec::Cap<P>
            capsec::Cap<capsec::FsAll>
            capsec::Cap<capsec::FsAll>
            capsec::Cap<capsec::NetAll>
            capsec::Cap<capsec::NetAll>
            capsec::Cap<capsec::Ambient>
            capsec::Cap<capsec::Ambient>
            capsec::Cap<capsec::Ambient>
          and $N others
